2014-06-09  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/functions_db.php: Added the function "get_valid_users_num".
	
	* include/functions_update_manager.php,
	  include/ajax/license.php: Removed some unused code and replaced
	some blocks with functions.

	* godmode/usuarios/configurar_usuarios.php,
	  include/functions_user.php: Added a limit on the user creation
	to the enterprise users.

2014-06-09 Miguel de Dios  <miguel.dedios@artica.es>
	
	* integria_demo.sql: fixed the installation of default data.
	
	* godmode/setup/offline_update.php: cleaned source code style.

2014-06-06  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* godmode/setup/update_manager.php,
	  include/functions_update_manager.php: Now the update
	manager only sends the number of users with the login
	enabled.

	* include/functions_crm.php: Now is possible to set a
	custom 'ORDER BY' in the function "crm_get_all_leads".
	
	* include/styles/integria.css: Added styles for
	"div.pipeline-list-owner".

	* operation/leads/lead_pipeline.php: Visual changes.

2014-06-06  Sergio Martin <sergio.martin@artica.es>

	* include/functions_api.php: Added email_copy and type
	parameters to the incident creation function on API

2014-06-06  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* operation/common/download_file.php: Removed the html
	entities of the filenames.

	* operation/download/browse.php: Removed the html entities
	of the filenames. Now the filenames are not modified. Now
	the name of the file upload form is the filename for default.
	Improved the error management.

2014-06-06  Sancho Lerena <slerena@artica.es>

	* images/backgrounds/back_metal_floor.jpg,
	images/backgrounds/dark_spot.jpg: New background images.

	* images/backgrounds/flowers.jpg,
	images/backgrounds/grass.jpg,
	images/backgrounds/tiles.jpg,
	images/backgrounds/wood.jpg: Same files, but compressed
	for smaller size.

2014-06-04  Alejandro Gallardo <alejandro.gallardo@artica.es>
